--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -2,6 +2,9 @@
 
 .dashboard {
   @include flex-col(flex-start, stretch, $spacing-md);
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   
   @include tablet-and-up {
     gap: $spacing-xl;
